src/objects/Truckers_Savings__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Truckers Savings</relationshipLabel>
        <relationshipName>Truckers_Savings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Savings_Amount__c</fullName>
        <label>Savings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Savings_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Savings Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>